# jaguar-reid-linus-loell

./: .gitignore  EDA_EXPERIMENTS.md  LEADERBOARD_EXPERIMENTS.md  README.md  TODOS.md  environment.yml  jag.yml  jaguar-ident.ipynb  jaguarreidentification-megadescriptor-arcfaceloss.ipynb  jp.out  jupyter.sh  myjob.sh  pyproject.toml
configs/: baseline.json  bg_intervention_train.json  bg_intervention_train_val.json  c2-dinov3-cosine-muon.json  c2-dinov3-cosine.json  combined.json  convnextv2.json  dinov3-cosine.json  dinov3.json  efficientnet.json  loss-ce.json  loss-focal.json  lr-scheduler-cosine-warmup.json  lr-scheduler-cosine.json  lr-scheduler-exponential.json  lr-scheduler-step.json  optimizer-muon.json  optimizer-sgd.json  resnet18.json  swintransformer.json
notebooks/: ConvNextV2-arcfaceloss.ipynb  EfficientNet-arcfaceloss.ipynb  ResNet18-arcfaceloss.ipynb  SwinTransformer-arcfaceloss.ipynb  dinoV3-arcfaceloss.ipynb  jaguar-ident.ipynb  losscomparison.ipynb  megadescriptor-arcfaceloss.ipynb  utils.py
